--- a/desafio4/package.json
+++ b/desafio4/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "handlebars": "^4.7.8",
+    "socket.io": "^4.7.2"
   }
 }
